# yatube

./: .gitignore  README.md  dc.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
nginx/: Dockerfile
tests/: conftest.py  test_about.py  test_auth_urls.py  test_comment.py  test_create.py  test_follow.py  test_homework.py  test_paginator.py  test_post.py  test_profile.py  utils.py
tests/fixtures/: fixture_data.py  fixture_user.py
yatube/about/: tests.py
yatube/api/: mixins.py  serializers.py  urls.py  views.py
yatube/config/: .env.dev  .env.template
yatube/core/: utils.py  views.py
yatube/core/context_processors/: year.py
yatube/core/templatetags/: user_filters.py
yatube/docker/: Dockerfile  dev-docker-compose.yml  gunicorn.sh
yatube/docker/caddy/: Caddyfile
yatube/posts/: admin.py  forms.py  models.py  urls.py  views.py
yatube/posts/migrations/: 0001_initial.py  0002_auto_20211109_0232.py  0003_auto_20211109_0552.py  0004_auto_20211110_0635.py  0005_auto_20211112_1549.py  0006_auto_20211127_1202.py  0007_auto_20211203_1647.py  0008_post_image.py  0009_auto_20211214_1135.py  0010_comment.py  0011_follow.py  0012_auto_20211221_0856.py  0013_auto_20211223_1529.py
yatube/posts/tests/: setup_data.py  test_forms.py  test_models.py  test_paginator.py  test_urls.py  test_views.py
yatube/templates/: base.html
yatube/templates/about/: author.html  tech.html
yatube/templates/core/: 403csrf.html  404.html
yatube/templates/includes/: header.html
yatube/users/: urls.py
yatube/yatube/: settings.py  urls.py
(+19 files in other folders)
